curso-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: curso-service
spec:
  type: ClusterIP
  selector:
    app: curso-service
  ports:
    - port: 8087
      targetPort: 8087
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curso-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curso-service
  template:
    metadata:
      labels:
        app: curso-service
    spec:
      containers:
        - name: curso-service
          image: angelcuero/curso-service:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8087
          readinessProbe:
