facultad-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: facultad-service
spec:
  type: ClusterIP
  selector:
    app: facultad-service
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facultad-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facultad-service
  template:
    metadata:
      labels:
        app: facultad-service
    spec:
      containers:
        - name: facultad-service
          image: joseloaiza01/facultad-service:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
