ova-analisis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: bisection-service
spec:
  type: ClusterIP
  selector:
    app: bisection-service
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bisection-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bisection-service
  template:
    metadata:
      labels:
        app: bisection-service
    spec:
      containers:
        - name: bisection-service
          image: joseloaiza01/bisection-service:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
