ova-costos-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: costos-service
spec:
  type: ClusterIP
  selector:
    app: costos-service
  ports:
    - port: 8084
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: costos-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: costos-service
  template:
    metadata:
      labels:
        app: costos-service
    spec:
      containers:
        - name: costos-service
          image: angiecobo/ovacostos:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8084
