ova-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ova-service
spec:
  type: ClusterIP
  selector:
    app: ova-service
  ports:
    - port: 8088
      targetPort: 8088
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ova-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ova-service
  template:
    metadata:
      labels:
        app: ova-service
    spec:
      containers:
        - name: ova-service
          image: angiecobo/ova-microservicio:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8088
