ova-discretas-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: discretas-service
spec:
  type: ClusterIP
  selector:
    app: discretas-service
  ports:
    - port: 8089
      targetPort: 8089
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discretas-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discretas-service
  template:
    metadata:
      labels:
        app: discretas-service
    spec:
      containers:
        - name: discretas-service
          image: angelcuero/discretas-jni:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8089
