ova-sistemas-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sistemas-service
spec:
  type: ClusterIP
  selector:
    app: sistemas-service
  ports:
    - port: 8085
      targetPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sistemas-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sistemas-service
  template:
    metadata:
      labels:
        app: sistemas-service
    spec:
      containers:
        - name: sistemas-service
          image: alejohernandez/ova-sistemas:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8085
