postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 5432
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - |
                    export PGPASSWORD=$POSTGRES_PASSWORD
                    until pg_isready -h 127.0.0.1 -U "$POSTGRES_USER"; do
                      echo "Esperando a PostgreSQL..."
                      sleep 2
                    done
                    psql -U "$POSTGRES_USER" -c "CREATE DATABASE semestre;" || true
                    psql -U "$POSTGRES_USER" -c "CREATE DATABASE facultad;" || true
                    psql -U "$POSTGRES_USER" -c "CREATE DATABASE curso;" || true
                    psql -U "$POSTGRES_USER" -c "CREATE DATABASE programa;" || true
                    psql -U "$POSTGRES_USER" -c "CREATE DATABASE usuario;" || true
                    psql -U "$POSTGRES_USER" -c "CREATE DATABASE ovas;" || true
                    psql -U "$POSTGRES_USER" -c "CREATE DATABASE costos;" || true
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U devdb -h 127.0.0.1
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U devdb -h 127.0.0.1
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
