programa-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: programa-service
spec:
  type: ClusterIP
  selector:
    app: programa-service
  ports:
    - port: 8086
      targetPort: 8086
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: programa-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: programa-service
  template:
    metadata:
      labels:
        app: programa-service
    spec:
      containers:
        - name: programa-service
          image: angelcuero/programa-service:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8086
