usuario-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuario-service
spec:
  type: ClusterIP
  selector:
    app: usuario-service
  ports:
    - port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuario-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuario-service
  template:
    metadata:
      labels:
        app: usuario-service
    spec:
      containers:
        - name: usuario-service
          image: nicolasls/usuario-service:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8083
