ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicios-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://santio.space"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length,Content-Range"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.santio.space
      secretName: microservicios-tls
  rules:
  - host: api.santio.space
    http:
      paths:
      - path: /facultad(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: facultad-service
            port:
              number: 8080
      - path: /semestre(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: semestre-service
            port:
              number: 8081
      - path: /bisection(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bisection-service
            port:
              number: 8082
      - path: /usuario(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: usuario-service
            port:
              number: 8083
      - path: /costos(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: costos-service
            port:
              number: 8084
      - path: /sistemas(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sistemas-service
            port:
              number: 8085
      - path: /programa(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: programa-service
            port:
              number: 8086
      - path: /curso(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: curso-service
            port:
              number: 8087
      - path: /ova(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ova-service
            port:
              number: 8088
